# VocabMaster

./: .env.example  .gitignore  README.md  README.ru.md  diff.txt  pyproject.toml  run_project.sh
backend/: main.py  run.py
backend/prompts/: fix_json_prompt.txt  prompt.txt  prompt_English.txt  prompt_German.txt  prompt_template_guide.md
docs/EN/: specifications.md
docs/RU/: specifications.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  App.test.js  index.jsx  simple.css  utils.js  utils.test.js
frontend/src/components/: History.jsx  History.test.js  Results.jsx  Results.test.js  WordForm.jsx  WordForm.test.js  languages.js
scripts/: csv_to_anki.py
tests/: test_backend_splitting.py
tests/backend/: test_main.py
tests/scripts/: test_anki.py
