[project]
name = "VocabMaster"
version = "0.1.0"
description = "A client-server application for English word processing using Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.37.0",
    "genanki>=0.13.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
